Finish fixing Fixed Width bug 79200, r=brade, sr=sfraser, a=asa